News UAT/force-app/main/default/objects/Opportunity/fields/Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group__c</fullName>
    <description>Revenue Group for the Opportunity - defaulted to the Account&#39;s Revenue Group.
If Revenue Group options change - also update the &#39;Revenue Group L1&#39; dependant formula field.</description>
    <label>Revenue Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amusements</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Dealers</fullName>
            </value>
            <value>
                <fullName>National (Communications/business equipment)</fullName>
            </value>
            <value>
                <fullName>National (Computers)</fullName>
            </value>
            <value>
                <fullName>National (Finance)</fullName>
            </value>
            <value>
                <fullName>National (Food and beverages)</fullName>
            </value>
            <value>
                <fullName>National (Gambling/gaming)</fullName>
            </value>
            <value>
                <fullName>National (Government/political)</fullName>
            </value>
            <value>
                <fullName>National (Media)</fullName>
            </value>
            <value>
                <fullName>National (Motor Vehicle Manufacturers)</fullName>
            </value>
            <value>
                <fullName>National (Other)</fullName>
            </value>
            <value>
                <fullName>National (Personal care products)</fullName>
            </value>
            <value>
                <fullName>National (Pharmaceutical / Health Products)</fullName>
            </value>
            <value>
                <fullName>National (Travel)</fullName>
            </value>
            <value>
                <fullName>Public Notices</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>