News UAT/force-app/main/default/objects/Opportunity/fields/Revenue_Schedule_Date_Alert__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Date_Alert__c</fullName>
    <formula>IF(Is_Campaign_Start_Date_Changed__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Cq5nh&quot;, &quot;Campaign&quot;, 30, 950), &quot;&quot;)
+
IF(Is_Close_Date_Changed__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Cq5nr&quot;, &quot;Opportunity&quot;, 17, 950), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Schedule Date Alert</label>
    <type>Text</type>
</CustomField>