News UAT/force-app/main/default/objects/Opportunity/fields/Revenue_Status__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Status__c</fullName>
    <description>Differentiates between a booked vs pipeline type opportunity.</description>
    <formula>IF( Count_Sales_Order_Line_Item__c &gt;=1, &#39;Booked&#39;,
    IF( Count_Sales_Order_Line_Item__c =0, &#39;Pipeline&#39;, &#39;Err: Reporting Type L2&#39;
    )
  )</formula>
    <inlineHelpText>Used in reporting dashboards to produce a dashboard component of how to track revenue (aplit of forecast, booked, pipeline etc) against target</inlineHelpText>
    <label>Revenue Status</label>
    <type>Text</type>
</CustomField>