News UAT/force-app/main/default/objects/Opportunity/fields/RevenueType__c.field-meta.xml
<CustomField>
    <fullName>RevenueType__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>