News UAT/force-app/main/default/objects/Opportunity/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <inlineHelpText>Mandatory campaign measures.</inlineHelpText>
    <label>ROI</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>