News UAT/force-app/main/default/objects/Opportunity/fields/Sales_Stage_L1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_L1__c</fullName>
    <formula>IF(
  NOT ISPICKVAL(StageName, &#39;Closed Won&#39;), TEXT(StageName),
  IF(ISPICKVAL(StageName, &#39;Closed Won&#39;) &amp;&amp;  Count_Sales_Order_Line_Item__c =1, &#39;Booked&#39;,
    IF (ISPICKVAL(StageName, &#39;Closed Won&#39;), &#39;Closed Won&#39;,&#39;Err: New Sales Stage not mapped - call admin&#39;
    )
  )
)</formula>
    <inlineHelpText>Only used for reporting. Allows users to report on sales stage and differentiate between pipeline vs closed vs booked.</inlineHelpText>
    <label>Sales Stage L1</label>
    <type>Text</type>
</CustomField>