News UAT/force-app/main/default/objects/Opportunity/fields/SalesSummary__c.field-meta.xml
<CustomField>
    <fullName>SalesSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Sales Summary that this opportunity belongs to (auto calculated via trigger, not editable via user)</description>
    <label>Sales Summary</label>
    <referenceTo>SalesSummary__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>