News UAT/force-app/main/default/objects/Opportunity/fields/Schedule_Date_before_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_before_Close_Date__c</fullName>
    <formula>Schedule_Date_Earliest__c &lt; CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Date before Close Date</label>
    <type>Checkbox</type>
</CustomField>