News UAT/force-app/main/default/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Who they are</inlineHelpText>
    <label>Segment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>