News UAT/force-app/main/default/objects/Opportunity/fields/Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changed__c</fullName>
    <label>Stage Changed</label>
    <type>Date</type>
</CustomField>