News UAT/force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(TEXT(StageName),
  &quot;Identify Prospects&quot;, &quot;Open&quot;,
  &quot;Establish Rapport&quot;, &quot;Open&quot;,
  &quot;Qualify Opportunity&quot;, &quot;Open&quot;,
  &quot;Select Product(s) and Update Stage&quot;, &quot;Open&quot;,
  &quot;Develop Solution/ Proposal&quot;, &quot;Open&quot;,
  &quot;Present Solution/ Proposal&quot;, &quot;Open&quot;,
  &quot;Re-affirm Value/ Negotiate&quot;, &quot;Open&quot;,
  &quot;Awaiting Bookings&quot;, &quot;Open&quot;,
  &quot;Closed Won&quot;, &quot;Closed Won&quot;,
  &quot;Closed Lost&quot;, &quot;Closed Lost&quot;,
  &quot;Err: Invalid stage name&quot;
)</formula>
    <inlineHelpText>Field to allow reporting on Win/ Lost vs Open. Do not display on page layouts.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>