News UAT/force-app/main/default/objects/Opportunity/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>