News UAT/force-app/main/default/objects/Opportunity/fields/Success_metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_metrics__c</fullName>
    <inlineHelpText>Additional benefits that differentiate</inlineHelpText>
    <label>Success metrics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>