News UAT/force-app/main/default/objects/Opportunity/fields/The_Big_Idea__c.field-meta.xml
<CustomField>
    <fullName>The_Big_Idea__c</fullName>
    <inlineHelpText>The creative platform/overarching campaign concept</inlineHelpText>
    <label>The Big Idea</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>