News UAT/force-app/main/default/objects/Opportunity/fields/TM1_Publication__c.field-meta.xml
<CustomField>
    <fullName>TM1_Publication__c</fullName>
    <formula>CASE(Owner.Sales_Team__c, 
  &quot;QLD Metro&quot;, &quot;401 - couriermail.com.au&quot;, 
  &quot;QLD Cairns&quot;,&quot;460 - cairnspost.com.au&quot;, 
  &quot;QLD Townsville&quot;,&quot;490 - townsvillebulletin.com.au&quot;, 
  &quot;QLD Community&quot;, &quot;625 - Brisbane Suburbans Digital&quot;, 
  &quot;QLD Gold Coast&quot;, &quot;685 - goldcoastbulletin.com.au&quot;, 
  &quot;VIC Metro&quot;, &quot;302 - heraldsun.com.au&quot;, 
  &quot;VIC Community&quot;, &quot;745 - Melbourne Suburbans Digital&quot;, 
  &quot;NSW Metro&quot;, &quot;111 - dailytelegraph.com.au&quot;, 
  &quot;NSW Community&quot;, &quot;250 - Sydney Suburbans Digital&quot;, 
  &quot;SA Metro&quot;, &quot;501 - adelaidenow.com.au&quot;, 
  &quot;SA Community&quot;, &quot;801 - Adelaide Suburbans Digital&quot;,
  &quot;NT Northern Territory&quot;, &quot;962 - ntnews.com.au&quot;,
  &quot;TAS Hobart&quot;, &quot;851 - themercury.com.au&quot;,
  &quot;NRM&quot;,&quot;5113 - Digital Marketing Services&quot;,
  &quot;VIC Geelong&quot;, &quot;351 - Geelong Advertiser Digital&quot;,
  &quot;Community Newspaper Group - CWA&quot;, &quot;180 - Group Functions&quot;,
  &quot;The Weekly Times&quot;, &quot;307 - The Weekly Times Digital&quot;,
  &quot;NewsAdds - Facebook NSW&quot;, &quot;250 - Sydney Suburbans Digital&quot;, 
  &quot;NewsAdds - Facebook QLD&quot;, &quot;625 - Brisbane Suburbans Digital&quot;, 
  &quot;NewsAdds - Facebook SA&quot;, &quot;801 - Adelaide Suburbans Digital&quot;, 
  &quot;NewsAdds - Facebook VIC&quot;, &quot;745 - Melbourne Suburbans Digital&quot;, 
  &quot;NewsAdds - Facebook WA&quot;, &quot;180 - Group Functions&quot;, 
  &quot;NewsAdds - Facebook NT&quot;, &quot;962 - ntnews.com.au&quot;, 
  &quot;NewsAdds - Facebook TAS&quot;, &quot;851 - themercury.com.au&quot;, 
  &quot;NewsAdds - Facebook VIC Geelong&quot;, &quot;351 - Geelong Advertiser Digital&quot;, 
&quot;&quot;)</formula>
    <label>TM1 Publication</label>
    <type>Text</type>
</CustomField>