News UAT/force-app/main/default/objects/Opportunity/fields/Total_actuals__c.field-meta.xml
<CustomField>
    <fullName>Total_actuals__c</fullName>
    <formula>Production_Creative_Actual__c  +  Production_Marketing_Actual__c  +  Production_Printing_Actual__c  +  Production_Digital_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>