News UAT/force-app/main/default/objects/Opportunity/fields/Total_budget__c.field-meta.xml
<CustomField>
    <fullName>Total_budget__c</fullName>
    <formula>Creative_Budget__c  +  Marketing_Budget__c  +  Printing_Budget__c  +  Digital_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>