News UAT/force-app/main/default/objects/Opportunity/fields/Total_charge__c.field-meta.xml
<CustomField>
    <fullName>Total_charge__c</fullName>
    <formula>Production_Creative_Charge__c +  Production_Events_Charge__c +  Production_Printing_Charge__c +  Production_Digital_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>