News UAT/force-app/main/default/objects/Opportunity/fields/Total_Creative_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Creative_Actual_Hours__c</fullName>
    <label>Total Creative Actual Hours</label>
    <summarizedField>Creative_Services_Team__c.Actual_hours__c</summarizedField>
    <summaryForeignKey>Creative_Services_Team__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>