News UAT/force-app/main/default/objects/Opportunity/fields/Type_of_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Platforms__c</fullName>
    <formula>IF(INCLUDES(OpportunityGroup__c,&quot;NewsXtend&quot;), 
IF(OR(INCLUDES(OpportunityGroup__c,&quot;Digital&quot;),INCLUDES(OpportunityGroup__c,&quot;Inserts&quot;),INCLUDES(OpportunityGroup__c,&quot;Newspaper&quot;), INCLUDES(OpportunityGroup__c,&quot;Magazine&quot;)),&quot;NewsXtend + Others&quot;, &quot;NewsXtend Only&quot;)
, &quot;Not NewsXtend&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Platforms</label>
    <type>Text</type>
</CustomField>