News UAT/force-app/main/default/objects/Opportunity/fields/Viewpath__Viewpath_Project_Formula__c.field-meta.xml
<CustomField>
    <fullName>Viewpath__Viewpath_Project_Formula__c</fullName>
    <formula>IF(
    ISNULL(Viewpath__VP_Project__c),

HYPERLINK(&quot;apex/Viewpath__VP_Project_New?CF00NA0000000l3I6=&quot;&amp; Name &amp; &quot;&amp;Name=&quot;&amp;Name&amp;&quot;&amp;CF00NA0000000l3I6_lkid=&quot; &amp; Id &amp; &quot;&amp;retURL=/&quot; &amp; Id,
IMAGE(&quot;/resource/Viewpath__Button_Create_Viewpath_Project&quot;, &quot;Create Viewpath Project&quot;),&quot;_self&quot;),

HYPERLINK(&quot;/&quot;+Viewpath__VP_Project__c, Viewpath__VP_Project__r.Name, &quot;_self&quot;)
)</formula>
    <label>Viewpath Project</label>
    <type>Text</type>
</CustomField>