News UAT/force-app/main/default/objects/Opportunity/fields/Viewpath__VP_Project__c.field-meta.xml
<CustomField>
    <fullName>Viewpath__VP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP Project Lookup</label>
    <referenceTo>Viewpath__VP_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>