News UAT/force-app/main/default/objects/Opportunity/fields/What_do_we_want_the_audience_to_feel_l__c.field-meta.xml
<CustomField>
    <fullName>What_do_we_want_the_audience_to_feel_l__c</fullName>
    <inlineHelpText>What do we want the audience to feel / think / learn?</inlineHelpText>
    <label>What do we want the audience to feel?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>