News UAT/force-app/main/default/objects/Opportunity/fields/What_does_the_client_want_to_communicate__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_client_want_to_communicate__c</fullName>
    <label>What does the client want to communicate</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>