News UAT/force-app/main/default/objects/Opportunity/recordTypes/ADM_ASM_Referral.recordType-meta.xml
<RecordType>
    <fullName>ADM_ASM_Referral</fullName>
    <active>true</active>
    <businessProcess>Proactive</businessProcess>
    <description>Opportunities handed over to an ADM/ASM to pursue</description>
    <label>ADM/ASM Referral</label>
</RecordType>