News UAT/force-app/main/default/objects/Opportunity/recordTypes/Brief.recordType-meta.xml
<RecordType>
    <fullName>Brief</fullName>
    <active>true</active>
    <businessProcess>Brief%2F Reactive</businessProcess>
    <description>By request of a client brief.</description>
    <label>Brief</label>
</RecordType>