News UAT/force-app/main/default/objects/Opportunity/recordTypes/Contractual_Negotiation.recordType-meta.xml
<RecordType>
    <fullName>Contractual_Negotiation</fullName>
    <active>true</active>
    <businessProcess>Agreement Negotiation</businessProcess>
    <description>Opportunities for the negotiation of an agreement for a commitment to spend.</description>
    <label>Agreement Negotiation</label>
</RecordType>