News UAT/force-app/main/default/objects/Opportunity/recordTypes/Historical.recordType-meta.xml
<RecordType>
    <fullName>Historical</fullName>
    <active>true</active>
    <businessProcess>Promotion%2F Historical</businessProcess>
    <description>Opportunities of an existing and established relationship and buying pattern.</description>
    <label>Historical</label>
</RecordType>