News UAT/force-app/main/default/objects/Opportunity/recordTypes/IMA.recordType-meta.xml
<RecordType>
    <fullName>IMA</fullName>
    <active>true</active>
    <businessProcess>NextGen</businessProcess>
    <description>Independent Agencies &amp; Major Accounts team</description>
    <label>IMA</label>
</RecordType>