News UAT/force-app/main/default/objects/Opportunity/recordTypes/Late_Space.recordType-meta.xml
<RecordType>
    <fullName>Late_Space</fullName>
    <active>true</active>
    <businessProcess>Walk-In Forecast</businessProcess>
    <description>Last minute opportunities initiated by you (sales rep).</description>
    <label>Late Space</label>
</RecordType>