News UAT/force-app/main/default/objects/Opportunity/recordTypes/Multi_Channel.recordType-meta.xml
<RecordType>
    <fullName>Multi_Channel</fullName>
    <active>true</active>
    <businessProcess>Multi-Channel</businessProcess>
    <description>Opportunities that include more than one sales channel.</description>
    <label>Multi-Channel</label>
</RecordType>