News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Brief.recordType-meta.xml
<RecordType>
    <fullName>NLM_Brief</fullName>
    <active>true</active>
    <businessProcess>NLM Brief %2F Reactive</businessProcess>
    <description>NLM Brief Sales Process</description>
    <label>NLM Brief</label>
</RecordType>