News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Brief_Approvals.recordType-meta.xml
<RecordType>
    <fullName>NLM_Brief_Approvals</fullName>
    <active>true</active>
    <businessProcess>NLM Brief %2F Reactive</businessProcess>
    <label>NLM Brief Approvals</label>
</RecordType>