News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Management.recordType-meta.xml
<RecordType>
    <fullName>NLM_Management</fullName>
    <active>true</active>
    <businessProcess>NLM Brief %2F Reactive</businessProcess>
    <label>NLM Management</label>
</RecordType>