News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Management_Approvals.recordType-meta.xml
<RecordType>
    <fullName>NLM_Management_Approvals</fullName>
    <active>true</active>
    <businessProcess>NLM Brief %2F Reactive</businessProcess>
    <label>NLM Management Approvals</label>
</RecordType>