News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Proactive.recordType-meta.xml
<RecordType>
    <fullName>NLM_Proactive</fullName>
    <active>true</active>
    <businessProcess>NLM Proactive</businessProcess>
    <description>NLM Proactive Sales Process</description>
    <label>NLM Proactive</label>
</RecordType>