News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Proactive_Approvals.recordType-meta.xml
<RecordType>
    <fullName>NLM_Proactive_Approvals</fullName>
    <active>true</active>
    <businessProcess>NLM Proactive</businessProcess>
    <label>NLM Proactive Approvals</label>
</RecordType>