News UAT/force-app/main/default/objects/Opportunity/recordTypes/NLM_Trade_Marketing.recordType-meta.xml
<RecordType>
    <fullName>NLM_Trade_Marketing</fullName>
    <active>true</active>
    <businessProcess>NLM Brief %2F Reactive</businessProcess>
    <label>NLM Trade Marketing</label>
</RecordType>