News UAT/force-app/main/default/objects/Opportunity/recordTypes/Proactive.recordType-meta.xml
<RecordType>
    <fullName>Proactive</fullName>
    <active>true</active>
    <businessProcess>Proactive</businessProcess>
    <description>Opportunities initiated by you (sales rep)</description>
    <label>Proactive</label>
</RecordType>