News UAT/force-app/main/default/objects/Opportunity/recordTypes/Promotions.recordType-meta.xml
<RecordType>
    <fullName>Promotions</fullName>
    <active>true</active>
    <businessProcess>Promotion%2F Historical</businessProcess>
    <description>Possibly part of an Advertising Campaign or a competition set up to give away a customer’s product or service, or, a value add part of an advertising campaign.</description>
    <label>Promotions</label>
</RecordType>