News UAT/force-app/main/default/objects/Opportunity/recordTypes/Self_Service.recordType-meta.xml
<RecordType>
    <fullName>Self_Service</fullName>
    <active>true</active>
    <businessProcess>Walk-In Forecast</businessProcess>
    <description>An opportunity automatically created by Salesforce as a result of an online transactional booking.</description>
    <label>Self Service</label>
</RecordType>