News UAT/force-app/main/default/objects/Opportunity/recordTypes/SME.recordType-meta.xml
<RecordType>
    <fullName>SME</fullName>
    <active>true</active>
    <businessProcess>NextGen</businessProcess>
    <description>Small to Medium Enterprises team</description>
    <label>SME</label>
</RecordType>