News UAT/force-app/main/default/objects/Opportunity/recordTypes/Synergy_Transition.recordType-meta.xml
<RecordType>
    <fullName>Synergy_Transition</fullName>
    <active>false</active>
    <businessProcess>Proactive</businessProcess>
    <label>Synergy Transition</label>
</RecordType>