News UAT/force-app/main/default/objects/Opportunity/recordTypes/Walk_In.recordType-meta.xml
<RecordType>
    <fullName>Walk_In</fullName>
    <active>true</active>
    <businessProcess>Walk-In Forecast</businessProcess>
    <description>An opportunity automatically created by Salesforce as a result of a transactional booking.</description>
    <label>Walk-in</label>
</RecordType>