News UAT/force-app/main/default/objects/Opportunity/recordTypes/Walk_In_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Walk_In_Forecast</fullName>
    <active>true</active>
    <businessProcess>Walk-In Forecast</businessProcess>
    <description>Recordtype to capture Walk-In Forecast. Kept as separate recordtype  due to ease of reporting filters. Recordtype is not selectable by standard users. Records can be created via custom UI.</description>
    <label>Walk-In Forecast</label>
</RecordType>