News UAT/force-app/main/default/objects/Opportunity/validationRules/Campaign_End_after_Campaign_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_End_after_Campaign_Start</fullName>
    <active>true</active>
    <description>The Campaign End Date must be after the Campaign Start Date</description>
    <errorConditionFormula>AND ( 
(Campaign_End_Date__c &lt; Campaign_Start_Date__c),
($Setup.NLM_Global_Settings__c.Fire_NLM_Validation_Rules__c)
)</errorConditionFormula>
    <errorDisplayField>Campaign_End_Date__c</errorDisplayField>
    <errorMessage>The Campaign End Date must be after the Campaign Start Date</errorMessage>
</ValidationRule>