News UAT/force-app/main/default/objects/Opportunity/validationRules/Cannot_Close_Win_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Close_Win_Opportunity</fullName>
    <active>true</active>
    <description>Cannot close win Opportunity until there is an approved SO on it and the related Account has an ABN entered.</description>
    <errorConditionFormula>AND(INCLUDES( OpportunityGroup__c , &#39;NewsXtend&#39;) , 
       IsWon=True,
       OR(Has_an_Approved_SO__c=False,
            AND(ISBLANK(Account.AccountNumber),
                   Account.ABN_Exempt__c = False
                  )
           )        
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Cannot close win an Opportunity until there is an Approved Sales Order on it and the related Account has an ABN entered.</errorMessage>
</ValidationRule>