News UAT/force-app/main/default/objects/Opportunity/validationRules/Close_Summary_Req_when_Oppty_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Summary_Req_when_Oppty_Closed_Lost</fullName>
    <active>true</active>
    <description>Closure Summary is required when the Opportunity Stage is Closed Lost</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBLANK(Closure_Summary__c),
($Setup.NLM_Global_Settings__c.Fire_NLM_Validation_Rules__c) 
)</errorConditionFormula>
    <errorDisplayField>Closure_Summary__c</errorDisplayField>
    <errorMessage>Closure Summary is required when the Opportunity Stage is Closed Lost</errorMessage>
</ValidationRule>