News UAT/force-app/main/default/objects/Opportunity/validationRules/CS_Xtend_Opportunity_CB_Retraction.validationRule-meta.xml
<ValidationRule>
    <fullName>CS_Xtend_Opportunity_CB_Retraction</fullName>
    <active>true</active>
    <description>Validation for Campaign Brief completeness and the need to review it.</description>
    <errorConditionFormula>NOT($Setup.No_Validation__c.Flag__c) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(StageName),&#39;Closed Won&#39;)) &amp;&amp;
INCLUDES(OpportunityGroup__c, &#39;NewsXtend&#39;) &amp;&amp; ISPICKVAL(StageName, &#39;Closed Won&#39;) &amp;&amp; NOT(Campaign_Brief_Form_Completed__c) &amp;&amp;
NOT(ISBLANK( Retraction_Date__c))</errorConditionFormula>
    <errorMessage>You must review the Campaign Brief for a Retracted Order</errorMessage>
</ValidationRule>