News UAT/force-app/main/default/objects/Opportunity/validationRules/CS_Xtend_Opportunity_CW.validationRule-meta.xml
<ValidationRule>
    <fullName>CS_Xtend_Opportunity_CW</fullName>
    <active>true</active>
    <description>Validation rule to enforce the completion of the new campaign brief questionnaire</description>
    <errorConditionFormula>NOT( $Setup.No_Validation__c.Flag__c) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(StageName),&#39;Closed Won&#39;)) &amp;&amp; 
INCLUDES(OpportunityGroup__c, &#39;NewsXtend&#39;) &amp;&amp; ISPICKVAL(StageName, &#39;Closed Won&#39;) &amp;&amp; NOT(Campaign_Brief_Form_Completed__c) &amp;&amp;
ISBLANK(Retraction_Date__c)</errorConditionFormula>
    <errorMessage>To Close Win Xtend Opportunity, you need to complete all the required fields in the Campaign Brief</errorMessage>
</ValidationRule>